--- a/src/app/emp-add-edit/emp-add-edit.component.html
+++ b/src/app/emp-add-edit/emp-add-edit.component.html
@@ -1,69 +1,48 @@
 <div mat-dialog-title>
-    <h1>Employee Form</h1>
+    <h1>Dictionnaire Form</h1>
 </div>
 <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
     <div mat-dialog-content class="content">
         <div class="row">
             <mat-form-field appearance="outline">
-                <mat-label>First name</mat-label>
-                <input matInput type="text" placeholder="Ex. Technical" formControlName="firstName">
+                <mat-label>Nom dictionnaire</mat-label>
+                <input matInput type="text" placeholder="Ex. greeting" formControlName="firstName">
             </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Last Name</mat-label>
-                <input matInput placeholder="Ex. Babaji" formControlName="lastName">
-            </mat-form-field>
+            
         </div>
 
         <div class="row">
             <mat-form-field appearance="outline">
-                <mat-label>Email</mat-label>
-                <input matInput type="email" placeholder="Ex. test@gmail.com" formControlName="email">
+                <mat-label>user input</mat-label>
+                <input [(ngModel)]="selectedItem" id="nouvel-element" matInput type="text" placeholder="Ex. hello/how r u?" formControlName="email">
             </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Date of birth</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="dob">
-                <mat-hint>MM/DD/YYYY</mat-hint>
-                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
+            <button mat-raised-button color="primary" (click)="updateItem()">add</button>
+
         </div>
 
         <div class="row">
-            <mat-radio-group aria-label="Select an option" formControlName="gender">
-                <mat-label><b>Gender</b></mat-label>
-                <mat-radio-button value="male">Male</mat-radio-button>
-                <mat-radio-button value="female">Female</mat-radio-button>
-                <mat-radio-button value="others">Others</mat-radio-button>
-            </mat-radio-group>
-        </div>
+            <ul id="ma-liste" class="list-group">
+                <li class="list-group-item" *ngFor="let item of items" (click)="selectItem(item)">{{ item }}<button mat-raised-button color="primary" (click)="deleteItem(item)">delete</button></li>
+            </ul>
+
+          </div>
+          
 
         <div class="row">
             <mat-form-field appearance="outline">
-                <mat-label>Education</mat-label>
-                <mat-select formControlName="education">
-                    <mat-option *ngFor="let val of education" [value]="val">{{val}}
-                    </mat-option>
-                </mat-select>
+                <mat-label>chatbot output</mat-label>
+                <input matInput type="text" placeholder="Ex. hi what can I do for u/fine thanks" formControlName="email">
             </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Company</mat-label>
-                <input matInput placeholder="Ex. Google" formControlName="company">
-            </mat-form-field>
+            <button mat-raised-button color="primary" type="submit">{{data ? 'Update': 'add'}}</button>
+
+           
         </div>
-        <div class="row">
-            <mat-form-field appearance="outline">
-                <mat-label>Experience</mat-label>
-                <input matInput placeholder="Ex. 4" type="number" formControlName="experience">
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Package</mat-label>
-                <input matInput placeholder="Ex. 12" type="number" formControlName="package">
-                <mat-hint>In rupees</mat-hint>
-            </mat-form-field>
-        </div>
+
+        
     </div>
     <div mat-dialog-actions class="action">
         <button mat-raised-button type="button" [mat-dialog-close]="false">Cancel</button>
         <button mat-raised-button color="primary" type="submit">{{data ? 'Update': 'Save'}}</button>
     </div>
+    
 </form>
