--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary">
-  <span>Crud Application</span>
+  <span>chatbot Application</span>
   <span class="example-spacer"></span>
   <button mat-raised-button (click)="openAddEditEmpForm()">
-    ADD EMPLOYEE
+    Apprentissage chatbot
   </button>
 </mat-toolbar>
 
@@ -93,4 +93,6 @@
 
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
   </div>
+
 </div>
+
