--- a/src/app/emp-add-edit/emp-add-edit.component.html
+++ b/src/app/emp-add-edit/emp-add-edit.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title>
-    <h1>Dictionnaire Form</h1>
+    <h1>Dictionary Form</h1>
 </div>
 <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
     <div mat-dialog-content class="content">
@@ -8,10 +8,10 @@
                 <mat-label>Nom dictionnaire</mat-label>
                 <input matInput type="text" placeholder="Ex. greeting" formControlName="firstName">
             </mat-form-field>
-            
+
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
             <mat-form-field appearance="outline">
                 <mat-label>user input</mat-label>
                 <input [(ngModel)]="selectedItem" id="nouvel-element" matInput type="text" placeholder="Ex. hello/how r u?" formControlName="email">
@@ -26,7 +26,7 @@
             </ul>
 
           </div>
-          
+
 
         <div class="row">
             <mat-form-field appearance="outline">
@@ -35,14 +35,20 @@
             </mat-form-field>
             <button mat-raised-button color="primary" type="submit">{{data ? 'Update': 'add'}}</button>
 
-           
+
         </div>
 
-        
+         -->
     </div>
+
+
+    <app-chips [title]="question" (itemsChanged)="onQuestionsChanged($event)"></app-chips>
+    <app-chips [title]="reponse" (itemsChanged)="onResponsesChanged($event)"></app-chips>
+    <button (click)="onButtonClick()">Click Me</button>
+
     <div mat-dialog-actions class="action">
         <button mat-raised-button type="button" [mat-dialog-close]="false">Cancel</button>
         <button mat-raised-button color="primary" type="submit">{{data ? 'Update': 'Save'}}</button>
     </div>
-    
+
 </form>
