fix some bugs and complete the update/create component

--- a/src/app/chips/chips.component.html
+++ b/src/app/chips/chips.component.html
@@ -16,7 +16,7 @@
              [matChipInputFor]="chipGrid"
              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
              [matChipInputAddOnBlur]="addOnBlur"
-             (matChipInputTokenEnd)="add($event)"/>
+             (matChipInputTokenEnd)="add($event)" required />
     </mat-chip-grid>
   </mat-form-field>
 </div>
