--- a/src/app/emp-add-edit/emp-add-edit.component.html
+++ b/src/app/emp-add-edit/emp-add-edit.component.html
@@ -6,7 +6,7 @@
         <div class="row">
             <mat-form-field appearance="outline">
                 <mat-label>Nom dictionnaire</mat-label>
-                <input matInput type="text" placeholder="Ex. greeting" formControlName="intent">
+                <input matInput type="text" placeholder="Ex. greeting" required formControlName="intent">
             </mat-form-field>
 
         </div>
