--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <span>chatbot Application</span>
   <span class="example-spacer"></span>
-  <button mat-raised-button (click)="openAddEditEmpForm()">
+  <button mat-raised-button (click)="openAddEditIntentForm()">
     Apprentissage chatbot
   </button>
 </mat-toolbar>
@@ -12,7 +12,7 @@
 
   <mat-form-field>
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Intent(dictionary) name" #input>
   </mat-form-field>
 
   <div class="table-container">
@@ -24,7 +24,6 @@
         <td mat-cell *matCellDef="let row"> {{row.intent}} </td>
       </ng-container>
 
-      <!-- Questions Column -->
       <ng-container matColumnDef="questions">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Questions </th>
         <td mat-cell *matCellDef="let row">
@@ -45,20 +44,13 @@
 
       </ng-container>
 
-      <!-- Responses Column -->
-      <!--
-      <ng-container matColumnDef="responses">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Responses </th>
-        <td mat-cell *matCellDef="let row"> {{getResponses(row, row.intent)}} </td>
-      </ng-container>
--->
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
         <td mat-cell *matCellDef="let row">
           <button mat-icon-button color="primary" (click)="openEditForm(row)">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button color="warn" (click)="deleteEmployee(row.intent)">
+          <button mat-icon-button color="warn" (click)="deleteIntent(row.intent)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
@@ -67,7 +59,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-      <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
       </tr>
